<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtTitle"
        android:text="@string/title_admin_panel"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <Button
        android:id="@+id/btnActors"
        android:text="@string/option_manage_actors"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <Button
        android:id="@+id/btnMovies"
        android:text="@string/option_manage_movies"
        app:layout_constraintTop_toBottomOf="@id/btnActors"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <Button
        android:id="@+id/btnUsers"
        android:text="@string/option_manage_users"
        app:layout_constraintTop_toBottomOf="@id/btnMovies"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>